<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_view_avatar"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:src="@color/black"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/text_view_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/sample_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:text="@string/released_date"/>

            <TextView
                android:id="@+id/text_view_released_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_released_date"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:text="@string/original_languange"/>

            <TextView
                android:id="@+id/text_view_original_languange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_original_languange"/>

            <ImageView
                android:id="@+id/image_view_favourite"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_baseline_favorite_24"
                android:contentDescription="@string/favourite_button" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:text="@string/overview"/>

    <TextView
        android:id="@+id/text_view_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_overview"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:text="@string/popularity"/>

    <TextView
        android:id="@+id/text_view_popularity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_popularity"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:text="@string/vote_average"/>

    <TextView
        android:id="@+id/text_view_vote_average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_vote_average"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:text="@string/vote_count"/>

    <TextView
        android:id="@+id/text_view_vote_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_vote_count"/>

</androidx.appcompat.widget.LinearLayoutCompat>